# text-to-code-rag-system

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.dvc/: config
configs/: train.yaml
configs/data/: base_data.yaml
configs/logging/: mlflow.yaml
configs/model/: base_model.yaml  frozen_encoders.yaml
data/: .gitignore  README.md  raw.dvc
text_to_code_rag/: __init__.py  commands.py  data_loader.py  data_manager.py  infer.py  model.py  train.py
